# my_rectangle

./: .gitignore  CMakeLists.txt  README.md  main.cpp
include/: jsonparser.h  parse_jsonstring_from_file.h  parser.h  rectangle.h
json_input_files/: rectangles_invalid_rectangle_int_rects.json
src/: jsonparser.cpp  parse_json_from_file.cpp  parser.cpp  rapid_json_test.cpp  rectangle.cpp
